<resources>
    <string name="app_name">Medical chatbot</string>


    <string name="sign_in_email_hint">User ID/Phone/Mail</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_button">Login</string>
    <string name="splash_button">Next</string>
    <string name="splash_title_welcome">Welcome</string>
    <string name="splash_choose_title"><![CDATA[Choose a language to proceed >>]]></string>
    <string name="login_sign_in">Log In</string>
    <string name="login_sign_up">SignUp</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google +</string>
    <string name="sign_in_show_password">Show password</string>
    <string name="sign_in_forgot">Forgot Password?</string>
    <string name="sign_up_name">Full name</string>
    <string name="sign_up_email">E-Mail</string>
    <string name="sign_up_password">Enter Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_button">SignUp</string>

    <string name="is_not_available">Is not available for now.</string>
    <string name="chat_input_hint">Type Here…</string>
    <string name="chat_title">Ask \"M\"</string>

    <string-array name="language_array">
        <item>Choose Language</item>
        <item>English</item>
    </string-array>

    <string name="bot_hello">Hi %s. This is \'M\', your personal health assistant. How can I help you today?</string>
    <string name="bot_for_who">Who\'s this for? &lt;br /&gt;For Ex. me or someone else.</string>

    <string name="bot_gender_someone">Is this person a male or female?</string>
    <string name="bot_gender_user">Are you a male or female?</string>

    <string name="bot_old_someone">How old is %s in years?</string>
    <string name="bot_old_user">How old are you in years?</string>

    <string name="bot_conservation">Tell me about the main symptoms or problems that %s having. It can be something brief like \"earache\". Or, it can
        be something longer like \"He has a cough, sniffles, and fever today. His throat also hurts.\"</string>
    <string name="bot_conservation_error">I\'m so sorry, but I can\'t understand your symptoms, can you explain more details?</string>
    <string name="bot_conservation_did_not">Sorry, I didn\'t get you.&lt;br /&gt;For Ex. Need to check mine/someone else\'s symptoms.</string>

    <string name="bot_symptoms_list">Sounds like %s symptoms or problems today is/are %s."</string>
    <string name="bot_symptoms_second_message">Which of these is the main concern right now? And which of these is bothering %s the most?"</string>

    <string name="bot_accept_button">Accept</string>
    <string name="bot_accept_none">None of these</string>
    <string name="home_ask_health">Ask Health Questions</string>
    <string name="home_symptoms">Check Symptoms</string>
    <string name="home_utilities">Utilities</string>
    <string name="home_settings"><![CDATA[About & Settings]]></string>
    <string name="divider_top_causes">Top Causes</string>
    <string name="divider_triage">Triage score in %</string>
    <string name="health_recommendation">Drinking coffee without adding sugar will help managing weight loss. Caffeine has been known to boost metabolism by 3–11%.</string>
    <string name="bot_more_button">Show more</string>
    <string name="bot_hide_more_button">Show less</string>
    <string name="home_blood_group">Blood group: </string>
    <string name="home_my_profile">My Profile</string>
    <string name="home_name">Name: </string>
    <string name="home_age">Age: </string>
    <string name="home_sex">Sex: </string>
</resources>
