<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.healthnavigatorapis.portal.chatbot.ui.splash.SplashFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/splashLogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_logo_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/splash_title_welcome"
            android:textColor="@color/colorSplashTitle"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splashChooseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/splash_choose_title"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashTitle" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/splashSpinner"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/splash_spinner"
            android:dropDownVerticalOffset="32dp"
            android:elevation="4dp"
            android:entries="@array/language_array"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/splashChooseTitle"
            app:layout_constraintStart_toStartOf="@+id/splashChooseTitle"
            app:layout_constraintTop_toBottomOf="@+id/splashChooseTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/splashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorSplashButton"
            android:onClick="@{()-> presenter.onNext()}"
            android:text="@string/splash_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>